swagger Trip - not finished
